Added creating database automatically and some API methods
